--- a/RunTracker/RunTracker/Info.plist
+++ b/RunTracker/RunTracker/Info.plist
@@ -20,6 +20,12 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>This application Use your current location</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This application Use your current location</string>
+	<key>NSMotionUsageDescription</key>
+	<string></string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
