--- a/RunTracker/RunTracker/Info.plist
+++ b/RunTracker/RunTracker/Info.plist
@@ -21,11 +21,15 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSLocationAlwaysUsageDescription</key>
-	<string>This application Use your current location</string>
+	<string>This application want to get your location Information in background</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>This application Use your current location</string>
 	<key>NSMotionUsageDescription</key>
 	<string></string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
